# ChangeLog for media-libs/libffado
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Apr 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  files/libffado-2.1.0-no-jackd-version.patch,
  files/libffado-9999-no-jackd-version.patch:
  Update patches so that jackd --version wont be called later on in the build
  process. (and fix typo)
  Many thanks to Sebastian Rose for reporting the issue.

*libffado-9999-r1 (01 Apr 2013)
*libffado-2.1.0-r1 (01 Apr 2013)

  01 Apr 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +libffado-2.1.0-r1.ebuild, +files/libffado-2.1.0-no-jackd-version.patch,
  +libffado-9999-r1.ebuild, +files/libffado-9999-no-jackd-version.patch:
  Add patch to avoid build system calling jackd --version. Addpredicts 
  deleted.
  Move to EAPI 5, base eclass and python-single-r1 eclass.
  Explicitly specify udev rules directory.
  Optimize before merging to file system (gives portage better file 
  control)

  03 Feb 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  libffado-2.1.0.ebuild:
  Keyworded for ~ppc. This is not completely OK as dbus-c++ does not 
  support ~ppc yet, but it is better than getting alot of warnings when 
  when running repoman in media-sound/jack-audio-connection-kit.

*libffado-2.1.0 (27 Sep 2012)

  27 Sep 2012; Gavin Pryke (gavlee) <gavinlee303@googlemail.com>
  -files/libffado-2.0_rc1-dbus_mainloop.patch, -libffado-2.0.0.ebuild,
  -libffado-2.0.1.ebuild, +libffado-2.1.0.ebuild,
  +files/libffado-2.1.0/0001-honour-toolchain-env.patch,
  +files/libffado-2.1.0/0002-remove-O2.patch, libffado-9999.ebuild,
  +files/libffado-9999/0001-honour-toolchain-env.patch,
  +files/libffado-9999/0003-remove-O2.patch, metadata.xml:
  bump to 2.1.0 and sync live ebuild. add patches for honouring flags from
  portage environment. tweak deps. set python version 2 and make use of eclass
  features. remove old ebuilds and patches. Thanks to all on list for info and 