@@ -6,8 +6,6 @@ AUX libffado-9999/0001-honour-toolchain-env.patch 1306 SHA256 c8ae6927b896d570af
 AUX libffado-9999/0003-remove-O2.patch 638 SHA256 46c7906e3801dcbd24f43dc823f53c8f89f2160be0751c3fe134da7520dc5464 SHA512 b58aa81395b6a9818b45db06707122467542cf8ced487bd1b62536bdba748f6f4a3155485096c42d1bed07207bfdaabbcfdb73845a17fc9bae9bf4498cf89c91 WHIRLPOOL 35a21d38ef57653856763d3b37cfd79732305eb3b5ce8823323c8c8efebf79a8e7058cd4b698d50aac41465d747a1e19c8ce01469dee66911aa1500a01abbf7a
 DIST libffado-2.1.0.tgz 1153758 SHA256 dec0ea985e738be698c64fb3184844f4bc9bcb38349c20241027051686af9d85 SHA512 37179cb32920f16577e9f887cf90aca8d46081573080cbe408654c5234c7f45433521c977918057e330ddaa5fefa98c983ea7806d4f1f33c950112cbe66d013b WHIRLPOOL a4802d6a9318912f9d88fe17febdb05f0d990e124921b5d1d8c754ca1ca7d7457cf5aef8f662b074e0205df23b04fec0ad242640dff87903db32de0eccde9667
 EBUILD libffado-2.1.0-r1.ebuild 1871 SHA256 fcae7b7ff53f36fb1c75789c12e477995d5b7b02a42dc6f9dddba9ca9c942c59 SHA512 2e8293e64ed5ec12b12f36ba8da16b41a0e9944fa1754de135f312562661f5adf14b1345f0a211cca03275f5f0fe396c77b9aaece454f1d6c90210ddde40c072 WHIRLPOOL 13014aca13bef8f1ec15450a280db397b96ee691f88e0262bdd6dacdf34f5224bc87ea8d57ecd04103fb931c060d900444be5087f9db1a6837ecc81c01463ace
-EBUILD libffado-2.1.0.ebuild 2055 SHA256 df0976c788333d7e37d93d1606f816be696c87d799c536c42600c2d803be2c47 SHA512 08a566d8c08d04626e6732cafd329a90ee5ce21c354bebd4cdc3aacd25a3f100088f8269c605c814d05b8fa91205ee7fc170420a7a7fd0eb223f5735d9cf1b16 WHIRLPOOL 935bbd1f73e93900ac281c85b93aebcd95bbae91205021cafaceb6bab360e777046ca5e42ffd56e778e894b2ccdd6c192c2c53b05577c52919b84b82bdf0a094
 EBUILD libffado-9999-r1.ebuild 1882 SHA256 e13bbb5f85525c8cfd7b19f14e242cd48cd6990a573aa0e1e38f6fd13fcdf70f SHA512 3956553213f8f40cd148f9d85a234c96169563bf22853d9d07e2fd80b81bd759e70876d90fbef3d2af2d4a5883c72eaa45c212b66225a3913a9b5fb9e5041d98 WHIRLPOOL ad6a0808656cd4052f13e68c4e6f8beb41d336c93e83aea3241a0ed9889aee913b957f1b1b13d630654a5766025f2107f0a99bb931740ae397b417ca8110cf68
-EBUILD libffado-9999.ebuild 2056 SHA256 89d0a81dd2dcadf3b92812fcac813e3c57a06040c5d0f7e38365b858966d573b SHA512 a8481b1999f4aaa7e038d1a5c74081c209c0b51380e346f96b72473f27cbd8fd80d9e5ba01328ff9fecf6183ea3cccb8c660dafc6f3a5a863200d912239b843a WHIRLPOOL f4bf86bf34f30601e824f614f6362786bd454355e875aeb65e49d5f1096f71a95e860369623fef217396ee3ae5727ee52707fdef1314f3711b3a178ad7bb67cb
-MISC ChangeLog 3447 SHA256 63c370ec219611f2bc3c8e00b4404d5e8287727aa046fe3eba5fa6653cb71e58 SHA512 1fe1e2da236d9feb3d43a141081d2ce5bdb1acfd720c3b966885bcb710be3aafb221b2e23364c2bb9077c13db834d5afcf8267b6abce53ea0ba6e45b46fd87ae WHIRLPOOL 072d6f48f0e561b0d434b981a01171a9983faf3f67cc90eec1630c99cef635fdbd932d0de395cd5f6a078d4b14b07cea62662f4e2652c93a5f2402f0050ef83f
+MISC ChangeLog 3599 SHA256 1d7e51ad3844e06a55c694e0576e79972f1078953c8cd9c57ce92f61b4240b91 SHA512 4f70cbfa51c525c7beb7eab1ff47216a7ba504f347ba56866fdee5cfdc7fe35de6fdc7df3737a5a02265d678f182ea7991e4e330b6a00f11487806ae3e25d7b9 WHIRLPOOL 6aa90abba1daa2d5b671b9c42b01f05c2e86a863bbd5d814f76705c375f545be879c6b637236d3f64aed582852a20f835c49f27b2aa26bf370aa84ffa64b58e8
 MISC metadata.xml 353 SHA256 608a4a6b28282ff02bda855731c407ccec16d907de90968b75241be123780a64 SHA512 f0399d9fbe3ffcd86066d1442c7a9dd178ac7601dea53280b6bd570bc5a839f4e63051b6bdd04d38c58a5edd6a39dac33af90b82bf46c633516d9ec3a5ee78b9 WHIRLPOOL a75323edc62d5cc245791c7d0cd56d16827d8f8778932c862684cbe59295821339ada5a3ed8a26de27a61f7f7c8ab0df8391efc4c42c608406314d9c579fad72
