@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 Nov 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  -libffado-2.1.0.ebuild, -libffado-9999.ebuild:
+  Removed old python eclass ebuilds.
+
   02 Apr 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
   files/libffado-2.1.0-no-jackd-version.patch,
   files/libffado-9999-no-jackd-version.patch:
